tg_parser/tests/type_errors/index_out_of_range.tg
gate INV(in a; out y) {
    pmos drain=y, gate=a, source=VDD;
    nmos drain=y, gate=a, source=GND;
}
circuit C(in a[2]; out y) {
    wire w;
    INV g1(a[5]) -> y;
}
